Let Text Shape have empty lines

SVG does not support adding relative offset for empty tags (and
mere spaces are considered as just "nothing" in xml), so if we
want to represent empty lines, we should just change the offset
of the lines with sane data.

BUG:392471